# paraview_mwes

./: .gitattributes  CurvatureWorkflow.mov  EulerSpiral.mov  Fredholm.mov  GrayScott.avi  GrayScottRealTime.mov  README.md  VolumeRenderingWavelet.mov  WarpByScalar.mov  jacobi_theta_phase.mov  kdv.avi  kdv_simulation.mov
example_data/: 1dgraph.vtk  breather_surface.vtk  daubechies_5_scaling_convergence.csv  euler_spiral.vtk  fermi_surface.vtk  jacobi_theta.vtk  lorenz.vtk  scalogram.vtk
figures/: 1dgraph.mov  CSVWorkflow.mov  GrayScottWarpedByScalar.avi  Scalogram.mov  ScatterPlot.mov
src/: BreatherSurface.cxx  CMakeLists.txt  EulerSpiral.cxx  Fredholm.cxx  GrayScott.cxx  Hydrogen.cxx  JacobiTheta.cxx  KdV.cxx  LissajousKnot.cxx  PaduaPoints.cxx  RandomRectilinear.cxx  ScatteredData.cxx  WaveletTransform.cxx
with_adios/: write_1d_graph.cxx
